--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
-  height: 100vh;
   background-color: #FAFAFA;
+  height: 100vh; /* Magic here */
+  width: 100vh; /* Magic here */
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
 }
 
 
